@@ -8,6 +8,7 @@ NEW IN WAF 1.6.10
 * Process larger java projects #1074
 * Remove the ':' from the drives when dealing with foreign files and folders on Win32
 * Let the 'subst' feature process a chmod attribute
+* Added a hook for distutils variable query #1083
 
 NEW IN WAF 1.6.9
 ----------------
